--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="zernovyex-fasol-x-chechevitsa" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=hjhHGlRxLK4AX_Ukc8p&oh=ab9be450a6d8d3cdb2653defacc96978&oe=5EE00C40" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="pishchevye-drozhzhi-x-nutritional" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84347677_2665354757084113_8900968863076313356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=3I1CUnfVB1gAX_RyHhn&oh=4d6e9ae33c45bb3e63cfbc46e91e887d&oe=5EC82015" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bananovyy-fosterxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mQjdAqDaVjkAX_SY19N&oh=1e7d13fffe03ce2fc708c3a3a4a197c8&oe=5E4D6C36" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mQjdAqDaVjkAX_SY19N&oh=d3f10c6573964ed590870c20fc4749fe&oe=5E4E14F6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="post-dlya-pozdravleniy-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=L9mTkZe0MmoAX-5uS-r&oh=32c30e4087614d7b4eb0a043ee969c9a&oe=5ECE9B92" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=L9mTkZe0MmoAX-5uS-r&oh=abb1becb6a5cea99f88f6451caaac655&oe=5EF62892" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="superbakteriya-streptokokk" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=axhO1KpzMX8AX_xNbaL&oh=6ad6c878968ea2ad8258745f41bf36d1&oe=5EC3F524" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=r4oLgtl6j1kAX-SPbWe&oh=5f80da15c17a61d78b50a240dee1b525&oe=5EC3F524" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhivaya-vodaxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=1IJQb6gHFTEAX96frGq&oh=62ef3df3bb63070af8d8af072afcebdf&oe=5EE33A3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Ari6AXGGdCwAX8raqMU&oh=73ae3643a8b241fc1b99445c886c3771&oe=5EE33A3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="3-sostavlyayushchie-antivirusnogo-pitaniyaxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=W-CHHv1NLyAAX_CARVS&oh=713fab182109b57d7d6834ce7adfec52&oe=5EE0F9F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=LehsyNsUgKMAX-haDIM&oh=79672b0477778225fa52d992d350be6b&oe=5EE0F9F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83456024_614531995789275_8962127920986392734_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=PqeQSUr5t3IAX9XBmm1&oh=2280b62636a0470523f1a7a4b2e920ea&oe=5EE2A51C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83456024_614531995789275_8962127920986392734_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=eCkJaOuFaDcAX8jiVta&oh=aa1e0ae70d2eb2d0852967c72df0780f&oe=5EE2A51C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="moya-istoriyaxxxxx-3" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=yuyNKPnsS6gAX-dOvPl&oh=bb14513966219909c5c36cb60d03b274&oe=5EF78494" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriya-xxxx" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=EZSsGa35AiQAX9vNLUP&oh=9aa4271000e0433ed1593994b10e1a0c&oe=5EC45AEC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
