--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=2py0zJfQ9iQAX9hWgdl&oh=7d4b30c921dbadc8335688964920ed0c&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=2py0zJfQ9iQAX9hWgdl&oh=065aedc7238a22327e01f38574662702&oe=5EF42C56" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -108,6 +108,16 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zernovyex-fasol-x-chechevitsa" type="checkbox" />
 							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84977937_272091443774406_879144713922642027_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=rSaO4_4bcz4AX_jBlkz&oh=52bc738475e4393e988f23b308ce076e&oe=5EC921A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="zernovyex-fasol-x-chechevitsa-1" type="checkbox" />
+							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84502243_216301459510644_6397643446493870773_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=zTUAhUgVfZIAX9uO1sd&oh=df226ff1eb3155d806cbfada581276a0&oe=5EE00C40" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЗЕРНОВЫЕ, ФАСОЛЬ, ЧЕЧЕВИЦА,">
 								<ul class="items-item__taglist">
 								</ul>
@@ -128,7 +138,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bananovyy-fosterxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mQjdAqDaVjkAX_SY19N&oh=b6490338951a8980fa32cbed44e65d70&oe=5E4EBDB6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=rmbYKr4P8YEAX_6LKaE&oh=24c8bc00790236bc85deaca15a15dc12&oe=5E500F36" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="post-dlya-pozdravleniy-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=L9mTkZe0MmoAX-5uS-r&oh=abb1becb6a5cea99f88f6451caaac655&oe=5EF62892" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=B7PUp45ADOkAX995Zjj&oh=23e1d79fb33cf29b564c04482d3de66d&oe=5EF62892" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +178,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rozmarinxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479765_1588120768007435_786353247178807367_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=clYSTUdZqSoAX9HUNGp&oh=a01f745f39efd35e2f2259b085cc70e9&oe=5EC7CA63" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОЗМАРИН 🌟🌿">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479765_1588120768007435_786353247178807367_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=xcKv3sg_U5sAX_9CnZP&oh=414c17c2394292d1d0d4ea6b0c840bf7&oe=5EC7CA63" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОЗМАРИН 🌟🌿">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kak-spravit-sya-so-streptokokkom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=rf9DPIDPCeQAX_fKzyX&oh=3c9db2f3a6015d893bcc75e64827eb7d&oe=5ECB60A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=Kd0LurpxGJIAX9_8pt_&oh=39132381cae702748bc4fb56adf670b7&oe=5ECB60A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="superbakteriya-streptokokk" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=r4oLgtl6j1kAX-SPbWe&oh=5f80da15c17a61d78b50a240dee1b525&oe=5EC3F524" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=r4oLgtl6j1kAX-SPbWe&oh=af2a7129e22fb8dc73a289337834af22&oe=5EEB8224" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-zhe-bylo-s-moey-kozhey" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=0pJXyKQQVUYAX9D0nHg&oh=a9eac7d82fbe308a1f33202b502a8f70&oe=5EFD6FD8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=_9HBOiTTMw8AX_r4Gw6&oh=dc1f677641a9b51ae6c8a7a8b6ffbb12&oe=5EFD6FD8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +258,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=WaMSvweqHNoAX-bEARF&oh=14c4c956b2f77a68411b5e4a19085c66&oe=5EC543D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=PHiA6Tr1YFcAX8Wp2Em&oh=aebcc87bbac16d32abfcafff227b0c2d&oe=5EC543D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx-2" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83528892_613291186070275_731161388949015759_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=w4ShqQNmDJQAX9sq6po&oh=c62ad701d300457f253c8bdd43e0a98e&oe=5EE3F299" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriyaxxxxx-3" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=yuyNKPnsS6gAX-dOvPl&oh=bb14513966219909c5c36cb60d03b274&oe=5EF78494" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83528892_613291186070275_731161388949015759_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=DhNAcnUdMdYAX_ojRvu&oh=ed533de2a79cff82c9e3c88bb59dc45b&oe=5EE3F299" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
